test/src/e2e_vm_tests/test_programs/should_fail/predicate_while/src/main.sw
predicate;

fn main() -> bool {
    let mut x = 0;
    while true { x += 1; }

    true
}
